<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/darkgrey"
    android:focusableInTouchMode="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_above="@id/buttonlayout">

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text=""
            android:textAlignment="viewEnd"
            />

        <TextView
            android:id="@+id/numberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:paddingTop="15dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text=""
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:verticalScrollbarPosition="right" />

        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:clickable="false"
            android:ellipsize="end"
            android:focusable="false"
            android:padding="10dp"
            android:text=""
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:focusableInTouchMode="false">


            <android.widget.Button
                android:id="@+id/buttonC"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:fontFamily="monospace"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/cbutton"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/buttonPar1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/par1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button00"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/doublezero"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false">


            <android.widget.Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/percent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/buttonPar2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/par2"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/buttonZero"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <android.widget.Button
                android:id="@+id/buttonBack"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:drawableTop="@drawable/backspace"
                android:drawableTint="@color/white"
                android:gravity="center"
                android:onClick="Click"
                android:paddingTop="25dp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <android.widget.Button
                android:id="@+id/buttonPi"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/pi"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />


            <android.widget.Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/buttonDot"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <android.widget.Button
                android:id="@+id/buttonSqr"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/sqroot"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/buttonDivision"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:fontFamily="monospace"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />


            <android.widget.Button
                android:id="@+id/buttonMultiplication"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/multi"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/buttonSubtraction"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/sub"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/buttonAddition"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/buttonEquals"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/lightblack"
                android:gravity="center"
                android:onClick="Click"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>




</RelativeLayout>